edit page is working and updating the routes

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -22,7 +22,10 @@
                 <%= routes.rockType %>
             </li>
         </ul>
+        <a href="/routes/<%=routes.id%>/edit">Edit This Route</a>
+        <nav>
         <a href="/routes">Back To Routes </a>
+        </nav>
 
     </body>
 </html>
