--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,6 +23,8 @@
             </li>
         </ul>
         <a href="/routes/<%=routes.id%>/edit">Edit This Route</a>
+        <form action="/routes/<%=routes.id%>?_method=DELETE" method="POST">
+            <input type="submit" value="Delete This Route"/>
         <nav>
         <a href="/routes">Back To Routes </a>
         </nav>
