--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,8 @@
                 <p><%=routes[i].name%></p>
             </a></br>
         <%}%>
+        <form action="/sessions/destroy?_method=DELETE" method="POST">
+            <input type="submit" value="Log Out">
+        </form>
     </body>
 </html>
