--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,7 +6,8 @@
     </head>
     <body>
         <h1> <%= routes.name %> </h1>
-        <h3> <%= routes.location %> </h3>
+        <h2>Rating: <%= routes.rating %> </h2>
+        <h3>Location: <%= routes.location %> </h3>
         <p> <%= routes.description %> </p>
         <ul>
             <li> Height:
