--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,6 +9,7 @@
         <form action="/routes" method="POST">
             Name: <input type="text" name="name"/></br>
             Description: <input type="text" name="description"/></br>
+            Rating: <input type="text" name="rating"/></br>
             Location: <input type="text" name="location"/></br>
             Height: <input type="number" name="height"/></br>
             Anchors: <input type="text" name="anchors"/></br>
