--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -2,15 +2,25 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title></title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="welcomestyle.css">
     </head>
     <body>
         <nav>
             <a href="/sessions/new">Log In</a>
             <a href="/users/new">Sign Up</a>
         </nav>
-
+    <div class="info"
         <h1> Welcome To Rock Climbing Routes </h1>
         <p> A place for you to check out rock climbing routes as well as rate routes and write reviews about the routes that you send. </p>
+    </div>
+    <div class="img">
+        <img src="https://lh3.googleusercontent.com/nEsoAwEH7pFnHPCoVkdGULtIb4LQWNQSCAsKmFZKVV-9fPg6QWk-7hGwPf8XHR8M588x820DiqvI-b8qezwWQYY-Y6A4CmHssS6_cPTnqp54UdK9tgzq9EZH0nHX0fca_hSnaardd3ME-FMvx-giXDkmUhvXStN6jpBAam6KNAFd1rqLIXSj68H_icBZ-cieIyrrk_Irx4iBeGvlyIlpOaF44rde198UXrKeEpGdFM2O18GuhHmriBpwsW-dat7v0k7ugKxVwR8ZWNaKBNOTCYG9EQoiYAHAflc111YVD7fyxYCzFVmZIO-Ud5UpgfqSHk_Cf7Tzh7VMXi1-faLpqU0bb3eHk9kV907hzUQiNaS6Hr6nulLYis_sbmLaywIMnpoc-L3sxprltdKmZmYDCS9R1rzYW6_zgEDhhibbGNloqHsmFTAAtU1N0icP2LEfRT0ciB2rcXpkYVZQo3aId6hANvfwrSlKKA9SIVmiF7y7rhEPf3yv0WJ4BH087dhNSxHO2ez3opD-S_vN--Sa73MvbGQT6JZghkgiIoDXzTxCtBk4DAVjg5spapzE4J4r6U94zkMBg36R5IxDYA9VxIBDChQZCL2euFpQ3lcUHkkMfbRhNoDHQYbiQjpC09IO1dJJJC37hFMmaY9cAQRODWphltU-eNjxeUKebrJsOTTcNONK_EF1oBY=w960-h720-no" alt="ROCKS">
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
