trying new styling

--- a/public/welcomestyle.css
+++ b/public/welcomestyle.css
@@ -1,27 +1,13 @@
-/* * {
-    background-color: green;
-} */
-/* nav {
-    background-color: tan;
-}
-a {
-
-}
-
-img {
-    background-size: cover;
-    background-position: center center;
+* {
+    background-color: #484848;
 }
 
 h1 {
-    color: tan;
-
+    text-align: center;
+    color: white;
 }
 
 p {
-    color: black;
+    text-align: center;
+    color: white;
 }
-
-a {
-    color: red;
-} */
