--- a/public/newsessionstyle.css
+++ b/public/newsessionstyle.css
@@ -1,15 +1,12 @@
 body {
     background: #484848;
 }
+
 h1 {
     color: white;
     text-align: center;
 }
 
-h2 {
-    color: white;
-}
-
-h3 {
-    color: white;
+form {
+    text-align: center;
 }
