adding an image place holder for user to maybe upload a picture of the route later

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,8 @@
         <h1> Rock Climbing Routes </h1>
         <h2> <% if(username){%>
             Welcome, <%=username%>
-        <%}%></h2>
+        <%}%>
+        </h2>
 
         <nav>
         <a class="btn btn-primary" href="/routes/new" role="button">Add A New Route </a>
@@ -35,13 +36,15 @@
     </div>
 </div>
     </nav>
-    <div class="routes">
+    <div class="main">
+        <div class="routes">
         <% for(let i = 0; i < routes.length; i++){%>
-
+            <img class="img" src="https://timeincsecure-a.akamaihd.net/rtmp_uds/293884104/201802/2722/293884104_5734513705001_5734514095001-th.jpg?pubId=293884104&videoId=5734514095001" alt="Route Image">
             <a href="/routes/<%=routes[i].id%>">
                 <p><%=routes[i].name%></p>
             </a></br>
         <%}%>
+        </div>
     </div>
     <form action="/sessions/destroy?_method=DELETE" method="POST">
         <input type="submit" value="Log Out">
