--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,6 +14,7 @@
             Name: <input type="text" name="name"/></br>
             Description: <input type="textarea" name="description"/></br>
             Rating: <input type="text" name="rating"/></br>
+            Image: <input type="URL" name="image"/></br>
             Location: <input type="text" name="location"/></br>
             Height: <input type="number" name="height"/></br>
             Anchors: <input type="text" name="anchors"/></br>
