--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -12,3 +12,13 @@ h1 {
     flex-direction: column;
     justify-content: center;
 }
+
+.main {
+    column-count: 3;
+    margin: 10px;
+}
+
+.img {
+    height: 200px;
+    width: 300px;
+}
