--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -7,18 +7,29 @@ h1 {
     text-align: center;
 }
 
-.routes {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+h2 {
+    text-align: center;
+    color: red;
 }
 
 .main {
-    column-count: 3;
-    margin: 10px;
+    margin: 10px auto;
+    padding: 10px;
+    display: flex;
+}
+
+.routes {
+    width: 300px;
+    height: 300px;
 }
 
 .img {
     height: 200px;
     width: 300px;
+    text-align: center;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
