--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,14 @@
     <body>
         <h1> Rock Climbing Routes </h1>
         <h2> <% if(username){%>
-            Welcome, <%=username%>
+            Welcome, <%=username%>!
         <%}%>
         </h2>
 
         <nav>
         <a class="btn btn-primary" href="/routes/new" role="button">Add A New Route </a>
+        <form action="/sessions/destroy?_method=DELETE" method="POST">
+            <input type="submit" value="Log Out">
         </form>
         <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Contact Me</button>
         <div id="myModal" class="modal fade" role="dialog">
@@ -39,15 +41,13 @@
     <div class="main">
         <div class="routes">
         <% for(let i = 0; i < routes.length; i++){%>
-            <img class="img" src="https://timeincsecure-a.akamaihd.net/rtmp_uds/293884104/201802/2722/293884104_5734513705001_5734514095001-th.jpg?pubId=293884104&videoId=5734514095001" alt="Route Image">
+            <img class="img" src="https://timeincsecure-a.akamaihd.net/rtmp_uds/293884104/201802/2722/293884104_5734513705001_5734514095001-th.jpg?pubId=293884104&videoId=5734514095001" alt="Route Image"></br>
             <a href="/routes/<%=routes[i].id%>">
                 <p><%=routes[i].name%></p>
-            </a></br>
+            </a>
         <%}%>
         </div>
     </div>
-    <form action="/sessions/destroy?_method=DELETE" method="POST">
-        <input type="submit" value="Log Out">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
