--- a/public/editstyle.css
+++ b/public/editstyle.css
@@ -1,1 +1,13 @@
+body {
+    background: #484848;
+}
 
+h1 {
+    text-align: center;
+    color: lightgrey;
+}
+
+form {
+    text-align: center;
+    color: lightgrey;
+}
