--- a/public/welcomestyle.css
+++ b/public/welcomestyle.css
@@ -4,10 +4,15 @@
 
 h1 {
     text-align: center;
-    color: white;
+    color: lightgrey;
 }
 
-p {
+h2 {
     text-align: center;
-    color: white;
+    color: lightgrey;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
