--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <form action="/sessions/destroy?_method=DELETE" method="POST">
             <input type="submit" value="Log Out">
         </form>
-        <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Contact Me</button>
+        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#myModal">Contact Me</button>
         <div id="myModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
