--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -12,8 +12,13 @@
             <a href="/sessions/new">Log In</a></br>
             <a href="/users/new">Sign Up</a>
         </nav>
+        <header>
         <h1> Welcome To Rock Climbing Routes </h1>
-        <p> Check out a list of rock climbing routes! You can add your favorite routes or edit a route that is already here! </p>
+        <h2> Check out a list of rock climbing routes! You can add your favorite routes or edit a route that is already here! </h2>
+    </header>
+    <main>
+         <img src="https://www.jasperhighlands.com/lifestyle/parks-trails/static/blue-rock-climbing-map.jpg" alt="Climbing">
+    </main>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
