added photos of routes

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,6 +14,7 @@
             Name: <input type="text" name="name" value="<%=routes.name%>"/></br>
             Description: <input type="text" name="description" value="<%=routes.description%>"/></br>
             Rating: <input type="text" name="rating" value="<%=routes.rating%>"/></br>
+            Image: <input type="text" name="image" value="<%=routes.image%>"/></br>
             Location: <input type="text" name="location" value="<%=routes.location%>"/></br>
             Height: <input type="number" name="height" value="<%=routes.height%>"/></br>
             Anchors: <input type="text" name="anchors" value="<%=routes.anchors%>"/></br>
