--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -24,8 +24,8 @@ h2 {
     text-align: center;
 }
 
-.img {
-    height: 200px;
+img {
+    height: 300px;
     width: 300px;
     text-align: center;
 }
